--- a/index/index.html
+++ b/index/index.html
@@ -66,10 +66,30 @@
         font-size: 16px;
         resize: vertical; /* allow vertical resizing */
       }
+
+      footer {
+        background-color: #f2f2f2;
+        padding: 20px;
+        border-top: 1px solid #ccc;
+      }
+
+      .container {
+        display: flex;
+        align-items: center;
+      }
+
+      h2 {
+        margin-right: 20px;
+      }
+
     </style>
   </head>
   <body>
     <header>📰 NewsGPT</header>
+    <div class="container">
+      <h2>Last Update:</h2>
+      <div id="last-update-time"></div>
+    </div>
     <form onsubmit="submitForm(event)">
       <label for="category">Category:</label>
       <select id="category" name="category" multiple size="5">
@@ -98,6 +118,9 @@
     <label for="output">Summarized News Headlines</label>
     <textarea id="output" name="output" rows="4" cols="100"></textarea>
   </body>
+  <footer>
+    <p>&copy; Created by: You Liang Tan and Louis Nguyen</p>
+  </footer>
 </html>
 <script>
     function submitForm(event) {
@@ -106,7 +129,7 @@
       const region = document.getElementById("region").value;
       const length = document.getElementById("length").value;
       const data = JSON.stringify({category, region, length});
-      fetch('/endpoint', {
+      fetch('/api/submit_news_form', {
         method: 'POST',
         body: data,
         headers: {
@@ -119,4 +142,19 @@
       })
       .catch(error => console.error(error));
     }
+
+    // Define function to make API call and update HTML
+    function getLatestUpdate() {
+      fetch('/api/last_update')
+        .then(response => response.text())
+        .then(data => {
+          // Update HTML with latest update data
+          console.log(data);
+          document.getElementById('last-update-time').innerHTML = data;
+        })
+        .catch(error => console.error(error));
+    }
+
+    // Call function on page load
+    window.onload = getLatestUpdate;
 </script>
