wip newsgpt deployed with newsgpt lib
Signed-off-by: youliang <tan_you_liang@hotmail.com>

--- a/index/index.html
+++ b/index/index.html
@@ -9,7 +9,7 @@
       }
       
       header {
-        background-color: #333333;
+        background-color: #3a2902;
         color: #FFFFFF;
         padding: 40px;
         text-align: center;
