--- a/index/index.html
+++ b/index/index.html
@@ -57,7 +57,7 @@
       
       textarea {
         width: 100%;
-        height: 200px; /* increase the height to 200px */
+        height: 50vh; /* increase the height to 200px */
         padding: 10px;
         border-radius: 5px;
         border: 1px solid #CCCCCC;
@@ -97,15 +97,15 @@
         <option value="politics">Politics</option>
         <option value="business">Business</option>
         <option value="sports">Sports</option>
-        <option value="entertainment">Entertainment</option>
+        <option value="technology">Technology</option>
       </select>
-      <label for="region">Region:</label>
+      <!-- <label for="region">Region:</label>
       <select id="region" name="region" multiple size="4">
         <option value="all">All</option>
         <option value="asia">Asia</option>
         <option value="europe">Europe</option>
         <option value="america">America</option>
-      </select>
+      </select> -->
       <label for="length">Length:</label>
       <select id="length" name="length" multiple size="3">
         <option value="short">Short</option>
@@ -116,7 +116,7 @@
     </form>
     <br><br>
     <label for="output">Summarized News Headlines</label>
-    <textarea id="output" name="output" rows="4" cols="100"></textarea>
+    <textarea id="output" name="output" rows="4" cols="100" readonly></textarea>
   </body>
   <footer>
     <p>&copy; Created by: You Liang Tan and Louis Nguyen</p>
@@ -126,9 +126,13 @@
     function submitForm(event) {
       event.preventDefault();
       const category = document.getElementById("category").value;
-      const region = document.getElementById("region").value;
+      // const region = document.getElementById("region").value;
       const length = document.getElementById("length").value;
-      const data = JSON.stringify({category, region, length});
+      const data = JSON.stringify({
+        category,
+        // region,
+        length
+      });
       fetch('/api/submit_news_form', {
         method: 'POST',
         body: data,
