--- a/index/index.html
+++ b/index/index.html
@@ -57,7 +57,7 @@
       
       textarea {
         width: 100%;
-        height: 50vh; /* increase the height to 200px */
+        height: 50vh; 
         padding: 10px;
         border-radius: 5px;
         border: 1px solid #CCCCCC;
@@ -154,6 +154,9 @@
         .then(data => {
           // Update HTML with latest update data
           console.log(data);
+          // convert timestamp to dd/mm/yyyy hh:mm:ss format
+          timestamp_ms = Number(data)*1000
+          data = new Date(timestamp_ms).toLocaleString();
           document.getElementById('last-update-time').innerHTML = data;
         })
         .catch(error => console.error(error));
